--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: '>=3.0.2 <4.0.0'
 
 dependencies:
+  sliding_up_panel: ^2.0.0+1
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   bloc_test: ^9.1.5
